--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
            <div class="container">
                <div id="l1"><h1><b><center>CLIENTELE</center></b></h1> </div>
                <hr>
-               <img src="clientele1.PNG" width=1110px>
-               <img src="clientele2.PNG" width=1110px>
+               <img src="clientele1.PNG" width=100%>
+               <img src="clientele2.PNG" width=100%>
                
                </div></body>
     
