--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               -moz-background-size: cover;
               -o-background-size: cover;
               background-size: cover;
+              padding-bottom: 20px;
               
             
           }
