--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               -moz-background-size: cover;
               -o-background-size: cover;
               background-size: cover;
-              padding: 25px;
+              padding-bottom: 200px;
               
             
           }
